force-app/main/default/objects/SPEN_Case_SLA__mdt/SPEN_Case_SLA__mdt.object-meta.xml
<CustomObject>
    <description>CRMD-7413 for mapping streetwork case SLA</description>
    <label>Streetwork/NRSWA SLA Settings</label>
    <pluralLabel>Streetwork/NRSWA SLA Settings</pluralLabel>
</CustomObject>