force-app/main/default/objects/SPEN_Case_SLA__mdt/fields/Number_of_Days__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Days__c</fullName>
    <label>Number of Days</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>