force-app/main/default/objects/SPEN_Case_SLA__mdt/fields/SPEN_BusinessHours__c.field-meta.xml
<CustomField>
    <fullName>SPEN_BusinessHours__c</fullName>
    <label>Business Hours</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Default</fullName>
                <default>true</default>
                <label>Default</label>
            </value>
            <value>
                <fullName>SPD SW/NRSWA Business Hours</fullName>
            </value>
            <value>
                <fullName>SPD Default</fullName>
            </value>
            <value>
                <fullName>SPM SW/NRSWA Business Hours Extended</fullName>
            </value>
            <value>
                <fullName>SPM SW/NRSWA Business Hours</fullName>
            </value>
            <value>
                <fullName>SPEN SPM SW Business Hours Extended</fullName>
            </value>
            <value>
                <fullName>SPEN SPM SW Business Hours</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>