force-app/main/default/objects/SPEN_Case_SLA__mdt/fields/SPEN_ClockEndTime__c.field-meta.xml
<CustomField>
    <fullName>SPEN_ClockEndTime__c</fullName>
    <label>Clock End Time</label>
    <length>15</length>
    <type>Text</type>
</CustomField>