force-app/main/default/objects/SPEN_Case_SLA__mdt/fields/SPEN_ClockStartTime__c.field-meta.xml
<CustomField>
    <fullName>SPEN_ClockStartTime__c</fullName>
    <label>Clock Start Time</label>
    <length>15</length>
    <type>Text</type>
</CustomField>