force-app/main/default/objects/SPEN_Case_SLA__mdt/fields/SPEN_Excavation_Required__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Excavation_Required__c</fullName>
    <label>Excavation Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
                <default>true</default>
                <label>Yes</label>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>