force-app/main/default/objects/SPEN_Case_SLA__mdt/fields/SPEN_Notice_Type__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Notice_Type__c</fullName>
    <label>Notice Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Minor</fullName>
                <default>true</default>
                <label>Minor</label>
            </value>
            <value>
                <fullName>Major</fullName>
            </value>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Emergency</fullName>
            </value>
            <value>
                <fullName>Urgent</fullName>
            </value>
            <value>
                <fullName>Immediate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>