force-app/main/default/objects/SPEN_Case_SLA__mdt/fields/SPEN_NumberofHours__c.field-meta.xml
<CustomField>
    <fullName>SPEN_NumberofHours__c</fullName>
    <label>Number of Hours</label>
    <precision>6</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>