force-app/main/default/objects/SPEN_Case_SLA__mdt/fields/SPEN_QueryType__c.field-meta.xml
<CustomField>
    <fullName>SPEN_QueryType__c</fullName>
    <label>Query Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NRSWA</fullName>
                <default>true</default>
                <label>NRSWA</label>
            </value>
            <value>
                <fullName>StreetWorks</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>