force-app/main/default/objects/SPEN_Case_SLA__mdt/fields/SPEN_RecordType__c.field-meta.xml
<CustomField>
    <fullName>SPEN_RecordType__c</fullName>
    <label>Record Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SPEN_Streetworks</fullName>
                <default>true</default>
                <label>SPEN_Streetworks</label>
            </value>
            <value>
                <fullName>SPEN_NRSWA</fullName>
            </value>
            <value>
                <fullName>SPEN_Query</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>