force-app/main/default/objects/SPEN_Case_SLA__mdt/fields/SPEN_Sensitivity__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Sensitivity__c</fullName>
    <label>Sensitivity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>T/S</fullName>
                <default>true</default>
                <label>T/S</label>
            </value>
            <value>
                <fullName>Non-T/S</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>