force-app/main/default/objects/SPEN_Case_SLA__mdt/fields/SPEN_SLA__c.field-meta.xml
<CustomField>
    <fullName>SPEN_SLA__c</fullName>
    <label>SLA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>