force-app/main/default/objects/SPEN_Case_SLA__mdt/fields/SPEN_SPD_SPM__c.field-meta.xml
<CustomField>
    <fullName>SPEN_SPD_SPM__c</fullName>
    <description>CRMD-7413</description>
    <label>SPD/SPM</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SPD</fullName>
                <default>true</default>
                <label>SPD</label>
            </value>
            <value>
                <fullName>SPM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>