force-app/main/default/objects/SPEN_Case_SLA__mdt/fields/SPEN_WorkItemRouting__c.field-meta.xml
<CustomField>
    <fullName>SPEN_WorkItemRouting__c</fullName>
    <label>Work Item Routing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>30 Min SLA North</fullName>
            </value>
            <value>
                <fullName>30 Min SLA South</fullName>
            </value>
            <value>
                <fullName>1 Hr SLA North</fullName>
            </value>
            <value>
                <fullName>1 Hr SLA South</fullName>
            </value>
            <value>
                <fullName>4 Hr SLA North</fullName>
            </value>
            <value>
                <fullName>4 Hr SLA South</fullName>
            </value>
            <value>
                <fullName>7 Hr SLA North</fullName>
            </value>
            <value>
                <fullName>7 Hr SLA South</fullName>
            </value>
            <value>
                <fullName>72 Hr SLA North</fullName>
            </value>
            <value>
                <fullName>72 Hr SLA South</fullName>
            </value>
            <value>
                <fullName>2 Hr SLA North</fullName>
            </value>
            <value>
                <fullName>2 Hr SLA South</fullName>
            </value>
            <value>
                <fullName>8 Hr SLA North</fullName>
            </value>
            <value>
                <fullName>8 Hr SLA South</fullName>
            </value>
            <value>
                <fullName>Streetworks - 5 Working Days</fullName>
            </value>
            <value>
                <fullName>Streetworks-2 Working Hours</fullName>
            </value>
            <value>
                <fullName>Streetworks-3 Working Days</fullName>
            </value>
            <value>
                <fullName>Streetworks-35 Calendar Days</fullName>
            </value>
            <value>
                <fullName>Streetworks-14 Calendar Days</fullName>
            </value>
            <value>
                <fullName>Streetworks-15 Calendar Weeks</fullName>
            </value>
            <value>
                <fullName>Streetworks-13 Working Days</fullName>
            </value>
            <value>
                <fullName>NRSWA - 2 Business Hours</fullName>
            </value>
            <value>
                <fullName>Streetworks- 2 Business Hours</fullName>
            </value>
            <value>
                <fullName>4 Hr SLA North-Lowest</fullName>
            </value>
            <value>
                <fullName>4 Hr SLA South-Lowest</fullName>
            </value>
            <value>
                <fullName>Streetworks_North_1Hr_SLA</fullName>
                <isActive>false</isActive>
                <label>Streetworks_North_1Hr_SLA</label>
            </value>
            <value>
                <fullName>Streetworks_North_30Min_SLA</fullName>
                <isActive>false</isActive>
                <label>Streetworks_North_30Min_SLA</label>
            </value>
            <value>
                <fullName>Streetworks_North_4Hr_SLA</fullName>
                <isActive>false</isActive>
                <label>Streetworks_North_4Hr_SLA</label>
            </value>
            <value>
                <fullName>Streetworks_North_72Hr_SLA</fullName>
                <isActive>false</isActive>
                <label>Streetworks_North_72Hr_SLA</label>
            </value>
            <value>
                <fullName>Streetworks_North_7Hr_SLA</fullName>
                <isActive>false</isActive>
                <label>Streetworks_North_7Hr_SLA</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>