force-app/main/default/objects/SPEN_Case_SLA__mdt/listViews/SPD_View.listView-meta.xml
<ListView>
    <fullName>SPD_View</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>SPEN_Excavation_Required__c</columns>
    <columns>SPEN_Notice_Type__c</columns>
    <columns>SPEN_Sensitivity__c</columns>
    <columns>Number_of_Days__c</columns>
    <columns>SPEN_SLA__c</columns>
    <columns>SPEN_SPD_SPM__c</columns>
    <columns>SPEN_BusinessHours__c</columns>
    <columns>SPEN_ClockEndTime__c</columns>
    <columns>SPEN_ClockStartTime__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SPEN_SPD_SPM__c</field>
        <operation>contains</operation>
        <value>SPD</value>
    </filters>
    <label>SPD View</label>
</ListView>