force-app/main/default/objects/SPEN_Case_SLA__mdt/listViews/SPEN_VIew.listView-meta.xml
<ListView>
    <fullName>SPEN_VIew</fullName>
    <columns>MasterLabel</columns>
    <columns>SPEN_BusinessHours__c</columns>
    <columns>SPEN_Excavation_Required__c</columns>
    <columns>SPEN_Notice_Type__c</columns>
    <columns>Number_of_Days__c</columns>
    <columns>SPEN_NumberofHours__c</columns>
    <columns>SPEN_RecordType__c</columns>
    <columns>SPEN_Sensitivity__c</columns>
    <columns>SPEN_SPD_SPM__c</columns>
    <columns>SPEN_ClockStartTime__c</columns>
    <columns>SPEN_ClockEndTime__c</columns>
    <columns>SPEN_QueryType__c</columns>
    <columns>SPEN_SLA__c</columns>
    <columns>SPEN_WorkItemRouting__c</columns>
    <filterScope>Everything</filterScope>
    <label>SPEN VIew</label>
</ListView>